--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-node_modules
-.env
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env # CRUCIAL: Never commit your environment variables!
+
+# Logs
+*.log
+logs/
+
+# OS generated files
+.DS_Store
+Thumbs.db
